css/lightbox.css
/* The Modal (background) */
.modal {
    display: none;
    position: fixed;
    z-index: 1;
    padding-top: 15%;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: #22243a;
}

.modal h2 {
    margin: 0 0 35px 0;
    font-size: 30px;
}

/* Modal Content */
.modal-content {
    margin: 0 auto;
    position: relative;
    background-color: #22243a;
    width: 1100px;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    align-content: center;
    justify-content: center;
}

/* The Close Button */
.close {
    color: white;
    position: absolute;
    top: 10px;
    right: 25px;
    font-size: 35px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #999;
    text-decoration: none;
    cursor: pointer;
}

@media (max-width: 1100px) {

    .modal-content {
        width: 100%;
    }

    .modal h2 {
        margin: 0 0 25px 0;
        font-size: 22px;
    }

}

